--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,11 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
     <title>React App</title>
+    <style>
+      html{
+        font-size: 10px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
